# openamnesia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  amnesia_daemon.py  config.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
amnesia/: __init__.py  cli.py  config.py  constants.py  daemon.py  filters.py  models.py
amnesia/api/: memory.py  server.py
amnesia/api_objects/: __init__.py  types.py
amnesia/connectors/: __init__.py  base.py  claude.py  codex.py  cursor.py  file_drop.py  imessage.py  registry.py  terminal.py
amnesia/enrichment/: vendors.py  youcom.py
amnesia/exports/: __init__.py  md_daily.py  skill_yaml.py
amnesia/inference/: __init__.py  litellm_provider.py
amnesia/ingest/: __init__.py  spool.py  trawl.py
amnesia/internal/: __init__.py  events.py  source_events.py
amnesia/pipeline/: __init__.py  base.py  cluster_enrich.py  clustering.py  embedding.py  entities.py  extract.py  hooks.py  memory_materialize.py  momentize.py  normalize.py  optimize.py  plugin_loader.py  sessionize.py  skill_mine.py
amnesia/sdk/: __init__.py  imessage.py
amnesia/sources/: __init__.py  base.py  registry.py
amnesia/sources/codex/: __init__.py  codex.py  helpers.py  reporting.py  types.py
amnesia/sources/cursor/: __init__.py  cursor.py  helpers.py  reporting.py  types.py
amnesia/sources/imessage/: __init__.py  helpers.py  imessage.py  reporting.py  types.py
amnesia/sources/terminal/: __init__.py  helpers.py  reporting.py  terminal.py  types.py
amnesia/store/: __init__.py  base.py  factory.py  memory.py  schema.sql  sqlite.py
amnesia/utils/: __init__.py  logging.py  macos.py
amnesia/utils/display/: __init__.py  terminal.py
deploy/akash/: deploy.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
ingest/cursor/: sample.jsonl
scripts/: deploy_akash.sh  deploy_render.sh  imessage_e2e.py  run_discovery.py  run_e2e.py  run_ingest.py  test_source.py
tests/: test_connectors.py  test_daemon.py  test_discovery.py  test_entities.py  test_filters.py  test_imessage_connector.py  test_imessage_sqlite_connector.py  test_pipeline.py  test_trawl.py
(+32 files in other folders)
