[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openamnesia"
version = "0.1.0"
description = "Local-first memory intake and skill extraction service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "rich>=13.0.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.14.0",
  "pre-commit>=3.8.0",
  "mypy>=1.11.0",
]
llm = [
  "litellm>=1.59.0",
  "pydantic>=2.8.0",
]

[project.scripts]
amnesia-daemon = "amnesia.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["amnesia*"]

[tool.mypy]
python_version = "3.11"
files = ["amnesia", "amnesia_daemon.py", "tests"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
